Resultat_partie renommé en win_lose et términée

--- a/Evgeni_fonctions.ipynb
+++ b/Evgeni_fonctions.ipynb
@@ -8,12 +8,57 @@
    "source": [
     "dico_jeu = {\n",
     "     \"points_de_vie_joueur\" : 50,\n",
-    "     \"points_de_vie_ennemi\" : 50,\n",
+    "     \"points_de_vie_ennemi\" : 0,\n",
     "     \"potions\" : 3,\n",
     "     \"tour_joueur\" : 1,\n",
     "     \"tour_ennemi\" : 0,\n",
     "     \"score\" : 0\n",
     " }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resultat_partie():\n",
+    "    if pv jouer <= 0:\n",
+    "        joueur décalré perdant.\n",
+    "        partie prend fin.\n",
+    "    elif pv ennemi <= 0:\n",
+    "        joueur déclaré gagnant.\n",
+    "        partie prend fin.\n",
+    "    \n",
+    "def fin_de_partie():\n",
+    "    dico_jeu[\"score\"] = dico_jeu[\"points_de_vie_joueur\"] + dico_jeu[\"potions\"]*50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le combat continue !\n"
+     ]
+    }
+   ],
+   "source": [
+    "def resultat_partie():\n",
+    "    if dico_jeu[\"points_de_vie_ennemi\"] <= 0:\n",
+    "        print(\"Vous avez reussi a battre le monstre ! Bien joué !\")\n",
+    "        print(\"Merci d'avoir joué !\")\n",
+    "    elif dico_jeu[\"points_de_vie_joueur\"] <= 0:\n",
+    "        print(\"Le monstre vous a battu ! Il n'y a donc plus d'éspoir...\")\n",
+    "    else:\n",
+    "        print(\"Le combat continue !\")\n",
+    "resultat_partie()\n",
+    "        \n",
+    "\n"
    ]
   }
  ],
