--- a/Evgeni_fonctions.ipynb
+++ b/Evgeni_fonctions.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "dico_jeu = {\n",
     "     \"points_de_vie_joueur\" : 50,\n",
-    "     \"points_de_vie_ennemi\" : 0,\n",
+    "     \"points_de_vie_ennemi\" : 50,\n",
     "     \"potions\" : 3,\n",
     "     \"tour_joueur\" : 1,\n",
     "     \"tour_ennemi\" : 0,\n",
@@ -36,29 +36,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le combat continue !\n"
+      "Le combat continue ! Choisisez votre action :\n"
      ]
     }
    ],
    "source": [
-    "def resultat_partie():\n",
+    "def win_lose():\n",
+    "    \"\"\"Fonction qui verifie les conditions de victoire du Joueur et de l'Ennemie.\n",
+    "    \"\"\"\n",
     "    if dico_jeu[\"points_de_vie_ennemi\"] <= 0:\n",
     "        print(\"Vous avez reussi a battre le monstre ! Bien joué !\")\n",
     "        print(\"Merci d'avoir joué !\")\n",
     "    elif dico_jeu[\"points_de_vie_joueur\"] <= 0:\n",
     "        print(\"Le monstre vous a battu ! Il n'y a donc plus d'éspoir...\")\n",
     "    else:\n",
-    "        print(\"Le combat continue !\")\n",
+    "        print(\"Le combat continue ! Choisisez votre action :\")\n",
     "resultat_partie()\n",
     "        \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la partie continue !\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fin_de_partie():\n",
+    "    if dico_jeu[\"points_de_vie_ennemi\"] <= 0:\n",
+    "        dico_jeu[\"score\"] = dico_jeu[\"points_de_vie_joueur\"] + dico_jeu[\"potions\"]*50 + 100\n",
+    "        print(f'Votre score pour cette partie est de {dico_jeu[\"score\"]} points')\n",
+    "        print(f'Dans cette partie vous avez su garder {dico_jeu[\"potions\"]} potions pour {dico_jeu[\"potions\"]*50} points !') \n",
+    "        print(f'Vous avez su gagner avec {dico_jeu[\"points_de_vie_joueur\"]} points de vie restant pour {dico_jeu[\"points_de_vie_joueur\"]} points !')\n",
+    "    if dico_jeu[\"points_de_vie_joueur\"] <=0:\n",
+    "        dico_jeu[\"score\"] = dico_jeu[\"points_de_vie_joueur\"] + dico_jeu[\"potions\"]*50\n",
+    "        print(f'Votre score pour cette partie est de {}')\n",
+    "        print(\"la partie continue !\")\n",
+    "\n",
+    "fin_de_partie()\n",
+    "    "
    ]
   }
  ],
