fonction fin_de_partie terminé

--- a/Evgeni_fonctions.ipynb
+++ b/Evgeni_fonctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,29 +65,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la partie continue !\n"
+      "Félicitations ! Vous avez remporté la partie !\n",
+      "Votre score pour cette partie est de 200 points\n",
+      "Dans cette partie vous avez su garder 3 potions pour 150 points !\n",
+      "Vous avez su gagner avec 50 points de vie restant pour 50 points !\n"
      ]
     }
    ],
    "source": [
     "def fin_de_partie():\n",
-    "    if dico_jeu[\"points_de_vie_ennemi\"] <= 0:\n",
-    "        dico_jeu[\"score\"] = dico_jeu[\"points_de_vie_joueur\"] + dico_jeu[\"potions\"]*50 + 100\n",
-    "        print(f'Votre score pour cette partie est de {dico_jeu[\"score\"]} points')\n",
-    "        print(f'Dans cette partie vous avez su garder {dico_jeu[\"potions\"]} potions pour {dico_jeu[\"potions\"]*50} points !') \n",
-    "        print(f'Vous avez su gagner avec {dico_jeu[\"points_de_vie_joueur\"]} points de vie restant pour {dico_jeu[\"points_de_vie_joueur\"]} points !')\n",
-    "    if dico_jeu[\"points_de_vie_joueur\"] <=0:\n",
-    "        dico_jeu[\"score\"] = dico_jeu[\"points_de_vie_joueur\"] + dico_jeu[\"potions\"]*50\n",
-    "        print(f'Votre score pour cette partie est de {}')\n",
-    "        print(\"la partie continue !\")\n",
-    "\n",
+    "        if dico_jeu[\"points_de_vie_ennemi\"] <= 0:\n",
+    "            dico_jeu[\"score\"] = dico_jeu[\"points_de_vie_joueur\"] + dico_jeu[\"potions\"]*50\n",
+    "            print(\"Félicitations ! Vous avez remporté la partie !\")\n",
+    "            print(f'Votre score pour cette partie est de {dico_jeu[\"score\"]} points')\n",
+    "            print(f'Dans cette partie vous avez su garder {dico_jeu[\"potions\"]} potions pour {dico_jeu[\"potions\"]*50} points !') \n",
+    "            print(f'Vous avez su gagner avec {dico_jeu[\"points_de_vie_joueur\"]} points de vie restant pour {dico_jeu[\"points_de_vie_joueur\"]} points !')\n",
+    "        elif dico_jeu[\"points_de_vie_joueur\"] <=0:\n",
+    "            dico_jeu[\"score\"] = 0\n",
+    "            print(\"Vous avez pas su l'emporter. Courage, vous ferez mieux la prochaine fois !\")\n",
+    "            print(f'Votre score pour cette partie est de {dico_jeu[\"score\"]} points...')\n",
+    "        else :\n",
+    "            pass\n",
+    "        with open(\"score.txt\", \"w\") as fichier:\n",
+    "            fichier.write(f' Score de la partie : {dico_jeu[\"score\"]} points !')\n",
     "fin_de_partie()\n",
     "    "
    ]
