les focntions attaque_joueur/ennemi

--- a/Yvette_fonctions.ipynb
+++ b/Yvette_fonctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
      "output_type": "stream",
      "text": [
       "vous avez infligé 9 dégâts.\n",
-      "il reste 29 points de vie à votre ennemi\n"
+      "il reste 41 points de vie à votre ennemi\n"
      ]
     }
    ],
@@ -74,15 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vous avez subi 13 dégâts.\n",
-      "il vous reste 24 points de vie\n"
+      "vous avez subi 8 dégâts.\n",
+      "il vous reste 16 points de vie\n"
      ]
     }
    ],
@@ -98,6 +98,7 @@
     "        dico_jeu[\"points_de_vie_joueur\"]-=degats_subis_joueur\n",
     "        print(f'vous avez subi {degats_subis_joueur} dégâts.') \n",
     "    print(f'il vous reste {dico_jeu[\"points_de_vie_joueur\"]} points de vie')\n",
+    "    dico_jeu[\"tour_ennemi\"]-=1\n",
     "attaque_ennemi()    \n",
     "        "
    ]
