tests sur fonctions attaque joueur/ennemi

--- a/Yvette_fonctions.ipynb
+++ b/Yvette_fonctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "     \"potions\" : 3,\n",
     "     \"tour_joueur\" : 1,\n",
     "     \"tour_ennemi\" : 0,\n",
-    "     \"score\" : 0\n",
+    "     \"score\" : 0,\n",
+    "     \"arme\": [\"epee\",\"arc\",\"eppee_a_deux_mains\"]\n",
+    "\n",
     " }"
    ]
   },
@@ -21,86 +23,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  - si attaque est choisie : infliger entre 5 et 10 pts de dégats au pnj.\n",
-    "- une fois que le joueur a effectué une action les pv du joueur et du pnj s'affichent.\n",
-    "    - aprés le tour du joueur on vérifie que le pnj est toujours vivant"
+    " # si attaque est choisie : infliger entre 5 et 10 pts de dégats au pnj.\n",
+    " # une fois que le joueur a effectué une action les pv du joueur et du pnj s'affichent.\n",
+    " # aprés le tour du joueur on vérifie que le pnj est toujours vivant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vous avez infligé 9 dégâts.\n",
-      "il reste 41 points de vie à votre ennemi\n"
+      "points de vie perdues:\n"
      ]
     }
    ],
    "source": [
     "import random as rd\n",
-    "def attaque_joueur():\n",
-    "    \"\"\"fonction qui permet au joueur d'attaquer l'ennemi\n",
-    "\n",
-    "    Returns:\n",
-    "        il affiche le nombre de dégas subis et le nombre de points de vie restant à l'ennemi\n",
-    "    \"\"\"\n",
+    "def attaque_joueur(points_de_vie_ennemi:dico_jeu) -> int:\n",
     "    # fonction attaque qui enlève les points à l'ennemi de manière aléatoire\n",
-    "    if dico_jeu[\"points_de_vie_joueur\"]>0:\n",
-    "        degats_subis_ennemi = rd.randint(5,10)\n",
-    "        dico_jeu[\"points_de_vie_ennemi\"]-= degats_subis_ennemi\n",
-    "    print(f'vous avez infligé {degats_subis_ennemi} dégâts.') \n",
-    "    print(f'il reste {dico_jeu[\"points_de_vie_ennemi\"]} points de vie à votre ennemi')\n",
-    "    \n",
-    "    \n",
-    "attaque_joueur()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- aprés le tour du joueur on vérifie que le pnj est toujours vivant\n",
-    "   - l'attaque du pnj inflige entre 5 et 15 pts de dégats au joueur.\n",
-    "    - on vérifie les points de vie du joueur.\n",
-    "        - si le pnj est mort on déclare le joueur le gagnant du jeu et la partie prend fin.\n",
-    "        - si les pv du pnj sont > 0 c'est qu'il est vivant et la partie continue\n",
-    "       "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vous avez subi 8 dégâts.\n",
-      "il vous reste 16 points de vie\n"
-     ]
-    }
-   ],
-   "source": [
-    "def attaque_ennemi():\n",
-    "    \"\"\"la fonction permet à l'ennemi d'attaquer le joueur\n",
-    "    \n",
-    "    Returns:\n",
-    "        il affiche le nombre de dégas subis et le nombre de points de vie restants au joueur\n",
-    "    \"\"\"\n",
-    "    if dico_jeu[\"points_de_vie_ennemi\"]>0:\n",
-    "        degats_subis_joueur = rd.randint(5,15)\n",
-    "        dico_jeu[\"points_de_vie_joueur\"]-=degats_subis_joueur\n",
-    "        print(f'vous avez subi {degats_subis_joueur} dégâts.') \n",
-    "    print(f'il vous reste {dico_jeu[\"points_de_vie_joueur\"]} points de vie')\n",
-    "    dico_jeu[\"tour_ennemi\"]-=1\n",
-    "attaque_ennemi()    \n",
-    "        "
+    "    if dico_jeu[\"points_de_vie_ennemi\"]>=0:\n",
+    "        dico_jeu[\"points_de_vie_ennemi\"]-= rd.randint(5,10)\n",
+    "print(\"points de vie perdues:\")"
    ]
   }
  ],
