--- a/Yvette_fonctions.ipynb
+++ b/Yvette_fonctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "l'ennemi passe son tour\n",
-      "vous avez infligé 0 dégâts à l'ennemi\n"
+      "vous avez infligé 18 dégâts à l'ennemi\n"
      ]
     }
    ],
@@ -114,10 +113,13 @@
     "import random as rd\n",
     "\n",
     "def usage_arme(dico_jeu):\n",
+    "    \n",
     "    \"\"\"\n",
-    "    permet au joeur de choisir une arme entre epée, arc et epée à deux mains\n",
-    "\n",
-    "    Args:prend en compte l'arme utilisée et affiche le nombre de dégpâts subis ou le joueur/ennemi passe son prochain tour\n",
+    "    Cette fonction permet au joueur de choisir une arme pour infliger des dégâts à l'ennemi.Il a le choix entre 3 armes : épée, arc et épée à deux mains.\n",
+    "    Les dégâts infligés dépendent de l'arme choisie.\n",
+    "    - Si c'est l'épée, les points de l'ennemi diminue aléatoirement entre 15 et 20 poins.\n",
+    "    - Si c'est l'arc, l'ennemi passe son prochain tour\n",
+    "    - Si l'épée à deux mains, les points de l'ennemi diminue aléatoirement entre 20 et 25 poins mais le joueur passe son prochain tour\n",
     "    \"\"\"\n",
     "    degats_subis_ennemi=0\n",
     "    choix_arme=input(\"quelle arme veux-tu utiliser?\")\n",
